Atualização do rodapé e responsividade do site.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -36,26 +36,17 @@
             </div>
         </div>
     </div>
+    <!-- Ícones Sociais -->
     <footer class="footer">
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/bruno-bastos-melo-442ba9bb" target="_blank">
-                <img src="Imagens/LinkedIn.jpg" alt="LinkedIn" class="logo">
-            </a>
-            <a href="https://github.com/bastosmelo" target="_blank">
-                <img src="Imagens/GitHub.jpg" alt="GitHub" class="logo">
-            </a>
-            <a href="https://www.facebook.com/bastosmelo" target="_blank">
-                <img src="Imagens/Facebook.jpg" alt="Facebook" class="logo">
-            </a>
-            <a href="https://www.instagram.com/bastosmelo/" target="_blank">
-                <img src="Imagens/Instagram.jpg" alt="Instagram" class="logo">
-            </a>
-            <a href="https://x.com/BrunoBastosMelo" target="_blank">
-                <img src="Imagens/X-Twiter.jpg" alt="Twitter" class="logo">
-            </a>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/bruno-bastos-melo-442ba9bb" target="_blank"><img src="Imagens/LinkedIn.jpg" alt="LinkedIn" class="social-links"></a>
+            <a href="https://github.com/bastosmelo" target="_blank"><img src="Imagens/GitHub.jpg" alt="GitHub" class="social-links"></a>
+            <a href="https://www.facebook.com/bastosmelo" target="_blank"><img src="Imagens/Facebook.jpg" alt="Facebook" class="social-links"></a>
+            <a href="https://www.instagram.com/bastosmelo/" target="_blank"><img src="Imagens/Instagram.jpg" alt="Instagram" class="social-links"></a>
+            <a href="https://x.com/BrunoBastosMelo" target="_blank"><img src="Imagens/X-Twiter.jpg" alt="X-Twiter" class="social-links"></a>
         </div>
-        <p>Bruno Bastos Melo © 2024. Todos os direitos reservados.</p>
-        <p><i>bruno.bastos@souunit.com.br</i></p>
+    <p>Bruno Bastos Melo © 2024. Todos os direitos reservados.</p>
+    <p><i>bruno.bastos@souunit.com.br</i></p>
     </footer>
 </body>
 </html>
